feat(root): add frontend
